tests/compile-fail/stacked_borrows/outdated_local.stderr
error: Undefined Behavior: attempting a read access using <untagged> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
  --> $DIR/outdated_local.rs:LL:CC
   |
LL |     assert_eq!(unsafe { *y }, 1);
   |                         ^^
   |                         |
   |                         attempting a read access using <untagged> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
   |                         this error occurs as part of an access at ALLOC[$HEX..$HEX]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: tag was most recently created at offsets [$HEX..$HEX]
  --> $DIR/outdated_local.rs:LL:CC
   |
LL |     let y: *const i32 = &x;
   |                         ^^
help: tag was later invalidated at offsets [$HEX..$HEX]
  --> $DIR/outdated_local.rs:LL:CC
   |
LL |     x = 1; // this invalidates y by reactivating the lowermost uniq borrow for this local
   |     ^^^^^
   = note: inside `main` at $DIR/outdated_local.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

